@@ -1,5 +1,13 @@
 2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/things/command/display.py:
+	  Create a Displayer class, that knows about coloring.
+	* python/things/command/main.py:
+	* python/things/command/project.py:
+	  Use it.
+
+2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* couchdb/views/open-projects-by-priority (added):
 	* couchdb/views/open-projects-by-priority/reduce.js (added):
 	* couchdb/views/open-projects-by-priority/map.js (added):
